# patiroha

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: analyze.py  generate_sample.py  sample_patents_500.csv  visualize.py
src/patiroha/: __init__.py  _lazy.py  _types.py  pipeline.py
src/patiroha/clustering/: __init__.py  labeling.py  landscape.py  spatial.py
src/patiroha/embeddings/: __init__.py  sbert.py  tfidf.py
src/patiroha/io/: __init__.py  loader.py
src/patiroha/metadata/: __init__.py  applicant.py  columns.py  dates.py  ipc.py
src/patiroha/network/: __init__.py  cooccurrence.py
src/patiroha/stats/: __init__.py  cagr.py  hhi.py  representatives.py
src/patiroha/stopwords/: __init__.py  catalog.py  manager.py
src/patiroha/tokenize/: __init__.py  filters.py  japanese.py  normalize.py
tests/: test_clustering.py  test_embeddings.py  test_io.py  test_metadata.py  test_network.py  test_stats.py  test_stopwords.py  test_tokenize.py
