[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patiroha"
version = "1.0.0"
description = "Patent text analysis toolkit for Japanese and multilingual patent documents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "しばやま", email = "shibayamalicht@gmail.com"}
]
keywords = ["patent", "nlp", "text-analysis", "japanese", "intellectual-property"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Natural Language :: Japanese",
]

dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "janome>=0.5",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.2"]
clustering = ["umap-learn>=0.5", "hdbscan>=0.8"]
network = ["networkx>=3.0"]
all = [
    "sentence-transformers>=2.2",
    "umap-learn>=0.5",
    "hdbscan>=0.8",
    "networkx>=3.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pandas-stubs",
]

[project.urls]
Repository = "https://github.com/shibayamalicht/patiroha"
Changelog = "https://github.com/shibayamalicht/patiroha/blob/main/CHANGELOG.md"
Issues = "https://github.com/shibayamalicht/patiroha/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/patiroha"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["patiroha"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "janome.*",
    "sentence_transformers.*",
    "umap.*",
    "hdbscan.*",
    "networkx.*",
    "sklearn.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
